Update SemanticQueryBuilder to use InferenceResultsProvider